[tool.poetry]
name = "capstone-project-team-2-learning-system-app"
version = "0.1.0"
description = ""
authors = ["Kellen Karls <kellen.karls@drake.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
black = "^20.8b1"
Kivy = "^2.0.0"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
